db credentials plugged from render.com

--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
-host=localhost
-user=vansh
-database=members_only
-password=qwerty
+# host=localhost
+# user=vansh
+# database=members_only
+# password=qwerty
+# port=5432
+
+host=dpg-cttarjjqf0us73eqjuk0-a
+user=members_only_db_0iba_user
+database=members_only_db_0iba
+password=XVHZECJMEu7PgG6lyQ8KvwpLXOrtMqX5
 port=5432
