going to deploy

--- a/.env
+++ b/.env
@@ -4,8 +4,4 @@
 # password=qwerty
 # port=5432
 
-host=dpg-cttarjjqf0us73eqjuk0-a
-user=members_only_db_0iba_user
-database=members_only_db_0iba
-password=XVHZECJMEu7PgG6lyQ8KvwpLXOrtMqX5
-port=5432
+DATABASE_URL=postgresql://members_only_psql_user:0U7ZnCKfQWiFEZihsHYQ14XwN63GXc8G@dpg-cv0rq9i3esus73aq5430-a.singapore-postgres.render.com/members_only_psql
